@startuml
class com.patch4code.loglinemovieapp.features.diary.presentation.screen_diary.DiaryViewModel {
-  _diaryLogs
+ LiveData<List<LoggedMovie>> diaryLogs
+ void getDiaryLogs()
}


class com.patch4code.loglinemovieapp.features.diary.presentation.screen_diary.DiaryViewModelFactory {
+ T create(Class<T>)
}

class com.patch4code.loglinemovieapp.features.diary.domain.model.LoggedMovie {
}


androidx.lifecycle.ViewModel <|-- com.patch4code.loglinemovieapp.features.diary.presentation.screen_diary.DiaryViewModel
com.patch4code.loglinemovieapp.features.diary.presentation.screen_diary.Factory <|.. com.patch4code.loglinemovieapp.features.diary.presentation.screen_diary.DiaryViewModelFactory
@enduml